# CompilerConstruction

a3/: Makefile  TypeChecker.hs  tccpp.hs
a3/lab2-testsuite/: progs-test-lab2.hs
a3/lab2-testsuite/bad/: 2015-bad001.cc  2015-bad002.cc  2015-bad003.cc  2015-bad004.cc  2015-bad005.cc  2015-bad006.cc  2015-bad007.cc  2015-bad008.cc  2015-bad009.cc  2015-bad010.cc  2015-bad011.cc  2015-bad012.cc  2015-bad013.cc  2015-bad015.cc  2015-bad016.cc  2015-bad017.cc  2015-bad018.cc  2015-bad019.cc  2015-bad020.cc  2015-bad022.cc  2015-bad023.cc  2015-bad026.cc  2015-bad027.cc  2015-bad101.cc  2015-bad102.cc  2015-bad113.cc  2015-bad114.cc  2015-bad115.cc  2015-bad116.cc  2015-bad117.cc  2015-bad118.cc  2015-bad119.cc  2015-bad120.cc  2015-bad121.cc  2015-bad122.cc  2015-bad123.cc  2015-bad124.cc  2015-bad125.cc  2015-bad126.cc  2015-bad127.cc  (+7 more)
a3/lab2-testsuite/good/: 2015-core001.cc  2015-core002.cc  2015-core003.cc  2015-core005.cc  2015-core006.cc  2015-core007.cc  2015-core009.cc  2015-core010.cc  2015-core012.cc  2015-core013.cc  2015-core014.cc  2015-core015.cc  2015-core016.cc  2015-core017.cc  2015-core019.cc  2015-core020.cc  2015-core101.cc  2015-core102.cc  2015-core103.cc  2015-core104.cc  2015-core105.cc  2015-core106.cc  2015-core107.cc  2015-core108.cc  2015-core109.cc  2015-core110.cc  2015-core111.cc  2015-core112.cc  2015-core113.cc  2015-good01.cc  2015-good03.cc  2015-good05.cc  2015-good07.cc  2015-good09.cc  2015-good11.cc  2015-good13.cc  (+3 more)
a4/: Codegen.hs  Emit.hs  Main.hs  Makefile  TypeChecker.hs  codegen.cabal  compile.sh  llvm-hs.cabal  main.c  test.h
