name:                codegen
version:             0

license:             MIT
license-file:        LICENSE
author:              Felix Lublow, Johannes Müller, Peter Zahn

build-type:          Simple
cabal-version:       >=1.8

executable codegen
  main-is: Main.hs
  -- other-modules:
  --build-depends:       base ==4.6.*, parsec ==3.1.*, containers ==0.5.*, mtl ==2.2.*, llvm-general-pure ==3.4.*, llvm-general ==3.4.*, array, transformers
  build-depends:       base >=4.6, parsec >=3.1, containers >=0.5, mtl >=2.1, llvm-general-pure >=3.4, llvm-general >=3.4, array, transformers
